feat: Expose Opus encoder settings to .env file

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ COOKIES_PATH=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 YT_DLP_PROXY=
+
+# Optional Opus encoder settings
+# OPUS_BITRATE=128000
+# OPUS_COMPLEXITY=10
+# OPUS_INBAND_FEC=true
+# OPUS_PACKET_LOSS_PERC=15
