--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,45 @@
+# Discord Bot Configuration
 BOT_TOKEN=
-COOKIES_PATH=
+
+# External Service Configuration
+COOKIES_PATH=cookies.txt
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 YT_DLP_PROXY=
 
-# Optional Opus encoder settings
+# --- Quality & Performance Tuning ---
+
+# Quality Preset: "performance", "balanced", "quality"
+# Overrides individual settings below unless they are explicitly set.
+# QUALITY_PRESET=balanced
+
+# Opus Encoder Settings
 # OPUS_BITRATE=128000
 # OPUS_COMPLEXITY=10
 # OPUS_INBAND_FEC=true
-# OPUS_PACKET_LOSS_PERC=15
+# OPUS_PACKET_LOSS_PERC=5
+# OPUS_DTX=false
+
+# Audio Processing Settings
+# BUFFER_SIZE=960
+# AUDIO_VOLUME=1.0
+# AUDIO_NORMALIZATION=true
+
+# Advanced Audio Processing
+# AUDIO_COMPRESSOR=true
+# COMPRESSOR_THRESHOLD=-20.0
+# COMPRESSOR_RATIO=4.0
+# COMPRESSOR_ATTACK=5
+# COMPRESSOR_RELEASE=50
+
+# Resampling Settings
+# ENABLE_RESAMPLING=true
+# RESAMPLING_QUALITY=28
+
+# FFmpeg Performance Settings
+# FFMPEG_THREAD_QUEUE_SIZE=512
+# FFMPEG_BUFFER_SIZE="512k"
+# FFMPEG_RT_BUFFER_SIZE="256M"
+# FFMPEG_PROBE_SIZE=32
+# FFMPEG_ANALYZE_DURATION=0
+# FFMPEG_RECONNECT_DELAY=5
