feat: Add Gemini API integration and /ask command

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ COOKIES_PATH=cookies.txt
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 YT_DLP_PROXY=
+GEMINI_API_KEY=
 
 # --- Quality & Performance Tuning ---
 
