feat: Allow custom DJ prompts

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 YT_DLP_PROXY=
 GEMINI_API_KEY=
+DJ_PROMPT_FILE_PATH=djprompt.txt
 
 # --- Quality & Performance Tuning ---
 
